# KeyOverlay-Obs-Plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  copy-web.ps1  deploy-local.ps1  uninstall-local.ps1
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/scripts/: Build-Windows.ps1
.github/workflows/: build.yml
cmake/common/: bootstrap.cmake  buildspec_common.cmake
data/locale/: en-US.ini
installer/: keyoverlay-installer.iss
src/: dock-panel.cpp  dock-panel.hpp  httpserver.cpp  httpserver.hpp  keyhook.cpp  keyhook.hpp  keyoverlay-plugin.cpp  keyoverlay-plugin.hpp  plugin-main.cpp  wsserver.cpp  wsserver.hpp
web/: KeyOverlay_PRD.docx  generate_layouts.py  index.html  temp.txt
web/css/: base.css  editor.css  keyboard.css  themes.css
web/js/: config.js  editor.js  export.js  keyboard.js  keyeditor.js  keypress.js  layouts.js  main.js  updater.js
web/layouts/: 60.json  65.json  75.json  full.json  numpad.json  tkl.json
